--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 appdirs==1.4.0
+cffi==1.9.1
 numpy==1.12.0
 packaging==16.8
+pycparser==2.17
 pyparsing==2.1.10
 scikit-learn==0.18.1
 scipy==0.18.1
 six==1.10.0
+SoundFile==0.9.0.post1
