--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 appdirs==1.4.0
 cffi==1.9.1
+click==6.7
+Flask==0.12
+Flask-uWSGI-WebSocket==0.6.0
+gevent==1.2.1
+greenlet==0.4.12
+itsdangerous==0.24
+Jinja2==2.9.5
+MarkupSafe==0.23
 numpy==1.12.0
-packaging==16.8
 pycparser==2.17
-pyparsing==2.1.10
 scikit-learn==0.18.1
 scipy==0.18.1
 six==1.10.0
 SoundFile==0.9.0.post1
+uWSGI==2.0.14
+Werkzeug==0.11.15
