--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ Flask==0.12
 Flask-uWSGI-WebSocket==0.6.0
 gevent==1.2.1
 greenlet==0.4.12
+gunicorn==19.7.0
 itsdangerous==0.24
 Jinja2==2.9.5
 MarkupSafe==0.23
 numpy==1.12.0
+packaging==16.8
 pycparser==2.17
+pyparsing==2.2.0
 scikit-learn==0.18.1
 scipy==0.18.1
 six==1.10.0
